# openfraud

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json
.opencode/agents/: openfraud.md
.opencode/plugins/openfraud/: package.json
docs/: TUI_INTEGRATION.md  TUI_SUMMARY.md  UNIVERSAL_INVESTIGATION_WORKBENCH.md
openfraud/: __init__.py
openfraud/cli/: forensics.py  graph.py  ml.py  status.py
openfraud/core/: __init__.py  forensics.py
openfraud/graph/: __init__.py  ingest.py  network_analysis.py
openfraud/models/: __init__.py  model_stack.py
openfraud/tui/: __init__.py  app.py  graph_screen.py  widgets.py
openfraud/utils/: __init__.py  data_utils.py
templates/: CUSTOMIZATION_PROMPT.md  sample_data_generator.py
tests/: test_forensics.py
